--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=...;Initial Catalog=...;User ID=...;Password=...;Integrated Security=False;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
